--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table border="1" style="background-color: yellow">
-		<caption>Student details</caption>
+	<table border="1px" style="background-color: yellow">
+		<caption>Student Details</caption>
 		<thead>
 			<tr>
 				<th>NAME</th>
