--- a/main.html
+++ b/main.html
@@ -4,11 +4,16 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		table,td,th{
+			border: 1px solid black;
+		}
+	</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table border="1px" style="background-color: yellow">
+	<table style="background-color: yellow">
 		<caption>Student Details</caption>
 		<thead>
 			<tr>
